ajuste de formatação/apresentação

--- a/chalenge.ipynb
+++ b/chalenge.ipynb
@@ -497,6 +497,11 @@
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "38be740ced2e49a2835424fb221d1cde",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
        "interactive(children=(Dropdown(description='facet_feature', options=('NU_INSCRICAO', 'CO_UF_RESIDENCIA', 'SG_U…"
       ]
@@ -792,18 +797,20 @@
     "### Investigando variáveis\n",
     "\n",
     "####  NU_IDADE, TP_ST_CONCLUSAO, TP_ANO_CONCLUIU (descartar)\n",
-    "<label><input type=\"checkbox\">  NU_IDADE:</label> \n",
+    "- NU_IDADE:\n",
     "    - NU_IDADE: TP_ST_CONCLUSAO em relação à idade.\n",
     "    - Conclusão: criar variável separando idade em 3 categorias: (0,16], (16,18], (18,25], (25,66] \n",
-    "<label><input type=\"checkbox\">  TP_ST_CONCLUSAO:</label> \n",
+    "- TP_ST_CONCLUSAO:\n",
     "    - TP_ST_CONCLUSAO: aplicar map: {4:1, 3:2, 2:3, 1:4}\n",
     "        \n",
     "#### Q001, Q002\n",
-    "<label><input type=\"checkbox\">  Q001 e Q002:</label> Categorias: A e B = 1, H = 2, C e D = 3, E = 4, F = 5, G = 6. \n",
+    "- Q001 e Q002: Categorias: A e B = 1, H = 2, C e D = 3, E = 4, F = 5, G = 6. \n",
+    "\n",
     "#### Q006\n",
-    "<label><input type=\"checkbox\">  Q006:</label> Reagrupamento de categorias e conversão para numéricas (duas em duas), exceto Q.\n",
+    "- Q006: Reagrupamento de categorias e conversão para numéricas (duas em duas), exceto Q.\n",
+    "\n",
     "#### Q047\n",
-    "<label><input type=\"checkbox\">  Q047:</label> Reordenamento e conversão para numéricas de acordo com ranqueamento da média de NU_NOTA_MT\n",
+    "- Q047: Reordenamento e conversão para numéricas de acordo com ranqueamento da média de NU_NOTA_MT\n",
     "    \n",
     "<br><hr>"
    ]
@@ -4102,33 +4109,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<pre>\n",
     "simple_featuring_scaling = lambda x: x / x.max()\n",
     "\n",
     "min_max = lambda x: x - x.min() / x.max() - x.min()\n",
     "\n",
-    "z_score = lambda x: x - x.mean() / x.std()"
+    "z_score = lambda x: x - x.mean() / x.std()\n",
+    "</pre>"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<pre>\n",
     "#describe() sem argumentos considera apenas features numéricas\n",
     "to_normalize = data_to_model.describe().columns.values.tolist()\n",
     "for it in to_normalize:\n",
     "    data_to_model[it] = (data_to_model[it] - data_to_model[it].mean()) / data_to_model[it].std()\n",
-    "data_to_model[to_normalize].head()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
+    "data_to_model[to_normalize].head()\n",
+    "</pre>\n",
+    "\n",
+    "<pre>\n",
     "#describe() sem argumentos considera apenas features numéricas\n",
     "to_normalize = data_to_test.describe().columns.values.tolist()\n",
     "for it in to_normalize:\n",
     "    data_to_test[it] = (data_to_test[it] - data_to_test[it].mean()) / data_to_test[it].std()\n",
-    "data_to_test[to_normalize].head()"
+    "data_to_test[to_normalize].head()\n",
+    "</pre>"
    ]
   },
   {
